--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 01:09:00 PM</p>
+    <p class="lastupdate">09/19/2020 01:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.972<br/>
             <span class="timestamp">08:35:01 AM</span><br/>
-            29.903<br/>
-            <span class="timestamp">01:06:01 PM</span>
+            29.900<br/>
+            <span class="timestamp">01:12:01 PM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -343,7 +343,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            224
+            225
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            75.5<br/>
-            <span class="timestamp">01:38:00 AM</span><br/>
+            75.6<br/>
+            <span class="timestamp">01:11:01 PM</span><br/>
             71.5<br/>
             <span class="timestamp">06:12:00 AM</span>
           </td>
